src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Previous_Subscription_Status__c</fullName>
        <description>Formula returning previous subscription status</description>
        <formula>TEXT(Previous_Subscription__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula returning previous subscription status</inlineHelpText>
        <label>Previous Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions (Previous Subscriptions)</relationshipLabel>
        <relationshipName>Subscriptions_Previous</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Certificates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Forces a print of all related subscription site certificates if they have not already been printed.</inlineHelpText>
        <label>Print all Certificates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_First_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to manually print first reminder packs if workflow failed</description>
        <label>Print First Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Second_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to manually print Second reminder packs if workflow failed</description>
        <label>Print Second Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Subscription_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Forces the printing of the Welcome/Renewal subscription pack.</inlineHelpText>
        <label>Print Subscription Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Third_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to manually print third reminder packs if workflow failed</description>
        <label>Print Third Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Codes__c</fullName>
        <label>Product Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCP_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temp field used for quals team to mark this RCP subscription as verified.</description>
        <inlineHelpText>Tick to denote this subscription has been checked and is valid</inlineHelpText>
        <label>RCP Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This  is updated by the scheduled task which creates a renewal opportunity for subscriptions due to renew.</description>
        <inlineHelpText>Denotes when a renewal opportunity has been created by scheduled task.</inlineHelpText>
        <label>Renewal Opportunity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Untick this box if you DO NOT wish to renew this subscription in the future</inlineHelpText>
        <label>Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Process_Old_Status__c</fullName>
        <description>Used to store the old status&apos;s where correctly updated as part of the renewal process project.</description>
        <label>Renewal Process Old Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Reminders__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Reminder emails should be generated from the renewal opportunity</inlineHelpText>
        <label>Renewal Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The latest Sales Proforma/Invoice that has been created for this Subscription.</inlineHelpText>
        <label>Latest Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revoke_iframe_permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, remove the iframe permissions for membership from the site contacts</description>
        <inlineHelpText>If ticked, remove the iframe permissions for membership from the site contacts</inlineHelpText>
        <label>Revoke iframe permissions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Date__c</fullName>
        <description>Calculates second reminder date</description>
        <formula>IF(  Subscription_Value__c &gt; 0,
   IF(  ISPICKVAL(Type__c, &apos;Renewal&apos;),
      IF( Includes_RCP_Product__c  &lt;&gt; true,
         IF( Includes_SUSA_Product__c  &lt;&gt; true,
           IF ( Includes_E_Delivery_Product__c &lt;&gt; true,
              IF(!ISPICKVAL(Paying_By__c, &apos;Direct Debit&apos;), Start_Date__c -  ((Longest_Reminder_Days__c   / 3)  * 2), null),
                 null
              ),
          null
        ),
     null
    ),
    null
   ),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date is only displayed if the subscription is a renewal, not paying by direct debit and the subscription value is greater than zero.</inlineHelpText>
        <label>Second Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_reminder_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second reminder email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_reminder_post_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second reminder post sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_reminder_sent__c</fullName>
        <description>Has second reminder has been sent</description>
        <formula>IF(
   OR(Second_reminder_email_sent__c = True, Second_reminder_post_sent__c = True) = True, 
   &apos;Yes&apos;, 
   &apos;No&apos;
)</formula>
        <inlineHelpText>If either the second reminder has been sent using email or post this displays &apos;Yes&apos; otherwise displays &apos;No&apos;</inlineHelpText>
        <label>Second reminder sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Subscription_by__c</fullName>
        <description>Works out how the subscription renewal should be sent to the customer.</description>
        <formula>IF(ISBLANK(Contact__r.Email),&apos;Post Only&apos;,
   IF( Includes_RCP_Product__c = True,&apos;Email Only&apos;,
   IF( Includes_E_Delivery_Product__c  = True,&apos;Email Only&apos;,
   IF( Includes_SUSA_Product__c  = True,&apos;Email Only&apos;,
      IF(ISPICKVAL(Contact__r.Subscription_Renewal_Communication__c,&apos;&apos;)  ||  ISPICKVAL(Contact__r.Subscription_Renewal_Communication__c, &apos;Use Global Setting&apos;),
      IF($Setup.Global_Communication_Settings__c.Send_Subscription_Pack_by_EMAIL_default__c = True  &amp;&amp; $Setup.Global_Communication_Settings__c.Send_Subscription_Pack_by_POST_bydefault__c = True, &apos;Email and Post&apos;,
         IF($Setup.Global_Communication_Settings__c.Send_Subscription_Pack_by_EMAIL_default__c = True, &apos;Email Only&apos;,
            IF($Setup.Global_Communication_Settings__c.Send_Subscription_Pack_by_POST_bydefault__c = True, &apos;Post Only&apos;, &apos;Error: Global Com setting not set&apos;              
            )
         )
      )
      ,TEXT(Contact__r.Subscription_Renewal_Communication__c)
    )
   )
  )
 )
)</formula>
        <inlineHelpText>Works out how the subscription renewal should be sent to the customer. To change change the renewal communication preferences on the Subscription Contact. If no setting is set the system global setting will be used unless the contact has no email.</inlineHelpText>
        <label>Send Subscription by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Product__c</fullName>
        <description>Total number of Site products on the subscription</description>
        <inlineHelpText>Total number of Site products on the subscription</inlineHelpText>
        <label>Site Products</label>
        <summaryForeignKey>Site_Product__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending - Not Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current - Not Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current - Renewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current - Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current - Cancelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended - Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended - Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended - Lapsing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended - Lapse Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current - Manual Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Auto_Number__c</fullName>
        <description>Auto number used as component in generating Sub Ref</description>
        <displayFormat>S{0000000}</displayFormat>
        <inlineHelpText>Used to generate Sub Ref if this is a new Subscription</inlineHelpText>
        <label>Sub Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sub_Ref__c</fullName>
        <description>Reference for Subscription - this is constant year on year
Populated via workflow</description>
        <inlineHelpText>Reference for Subscription - this is constant year on year</inlineHelpText>
        <label>Sub Ref</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Developer field used to send email notification to when subscription is first created.  Data in this field is not kept up to date</description>
        <inlineHelpText>Do not put on page layout</inlineHelpText>
        <label>Subscription Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Contract_End_Date__c</fullName>
        <description>End date of subscription contract</description>
        <formula>Opportunity__r.Subscription_Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls contract end date from related opportunity</inlineHelpText>
        <label>Subscription Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Contract_Start_Date__c</fullName>
        <description>Start date of subscription contract</description>
        <formula>Opportunity__r.Subscription_Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls contract start date from related opportunity</inlineHelpText>
        <label>Subscription Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Line__c</fullName>
        <description>The total number of subscription lines on the subscription</description>
        <inlineHelpText>The total number of subscription lines on the subscription.</inlineHelpText>
        <label>Subscription Lines</label>
        <summaryForeignKey>Subscription_Line__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Mark the Subscription Manager, if this is different from the Account Manager. Renewals will go to this person if this field is populated.</inlineHelpText>
        <label>Subscription Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Notice_Period_Days__c</fullName>
        <description>Minimum notice required for customer to cancel subscription</description>
        <formula>Opportunity__r.Subscription_Notice_Period_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls Minimum notice required for customer to cancel subscription from opportunity</inlineHelpText>
        <label>Subscription Notice Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Pack_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the welcome subscription pack has been sent, used in view &quot;Subscription Packs To Be Sent&quot;</description>
        <inlineHelpText>Check box when welcome subscription pack has been sent</inlineHelpText>
        <label>Subscription Pack Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Sites__c</fullName>
        <inlineHelpText>An automatic count of the number of sites covered by this subscription</inlineHelpText>
        <label>Subscription Sites</label>
        <summaryFilterItems>
            <field>Subscription_Site__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription_Site__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Value__c</fullName>
        <description>Roll up of sales prices from subs lines</description>
        <label>Subscription Value</label>
        <summarizedField>Subscription_Line__c.Product_Sales_Price__c</summarizedField>
        <summaryForeignKey>Subscription_Line__c.Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subsequent_First_Reminder_Date__c</fullName>
        <description>Calculates subsequent first reminder date</description>
        <formula>IF(ISBLANK(Subsequent_Subscription__c),
   IF( ISPICKVAL(Type__c, &apos;Renewal&apos;), 
      IF( ISPICKVAL(Paying_By__c, &apos;Direct Debit&apos;), 
         End_Date__c - 20, 
         End_Date__c - Longest_Reminder_Days__c
      ), 
      null 
   ),
    Subsequent_Subscription__r.First_Reminder_Date__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subsequent First Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subsequent_Second_Reminder_Date__c</fullName>
        <description>Calculates subsequent second reminder date</description>
        <formula>IF(ISBLANK(Subsequent_Subscription__c),
   IF(  ISPICKVAL(Type__c, &apos;Renewal&apos;),
      IF(!ISPICKVAL(Paying_By__c, &apos;Direct Debit&apos;), 
         End_Date__c -  ((Longest_Reminder_Days__c   / 3)  * 2), 
         null
      ),
      null
   ),
   Subsequent_Subscription__r.Second_Reminder_Date__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subsequent Second Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subsequent_Sub_Status__c</fullName>
        <description>Formula returning subscription status</description>
        <formula>TEXT(Subsequent_Subscription__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula returning subscription status</inlineHelpText>
        <label>Subsequent Sub Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsequent_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsequent Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions (Subsequent Subscription)</relationshipLabel>
        <relationshipName>Subscriptions_Subsequent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subsequent_Third_Reminder_Date__c</fullName>
        <description>Calculates subsequent third reminder date</description>
        <formula>IF(ISBLANK(Subsequent_Subscription__c),
   IF(  ISPICKVAL(Type__c, &apos;Renewal&apos;),
      IF( !ISPICKVAL(Paying_By__c, &apos;Direct Debit&apos;), 
          End_Date__c -  (Longest_Reminder_Days__c   / 3), 
          null
      ),
      null
   ),
    Subsequent_Subscription__r.Third_Reminder_Date__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subsequent Third Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TestDataSubset__c</fullName>
        <description>Temp field to identify subsets of data which are used for renewals testing</description>
        <label>TestDataSubset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Reminder_Date__c</fullName>
        <description>Calculates third reminder date</description>
        <formula>IF(  Subscription_Value__c &gt; 0,
   IF(  ISPICKVAL(Type__c, &apos;Renewal&apos;),
      IF( Includes_RCP_Product__c &lt;&gt;true,  
         IF( Includes_SUSA_Product__c &lt;&gt;true,  
           IF( Includes_E_Delivery_Product__c  &lt;&gt;true,    
              IF( !ISPICKVAL(Paying_By__c, &apos;Direct Debit&apos;), Start_Date__c -  (Longest_Reminder_Days__c   / 3), null),
              null
           ),
           null
        ),
     null
     ),
    null
   ),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date is only displayed if the subscription is a renewal, not paying by direct debit and the subscription value is greater than zero.</inlineHelpText>
        <label>Third Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_reminder_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third reminder email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_reminder_post_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third reminder post sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_reminder_sent__c</fullName>
        <formula>IF(
   OR(Third_reminder_email_sent__c = True, Third_reminder_post_sent__c = True) = True, 
   &apos;Yes&apos;, 
   &apos;No&apos;
)</formula>
        <inlineHelpText>If either the third reminder has been sent using email or post this displays &apos;Yes&apos; otherwise displays &apos;No&apos;</inlineHelpText>
        <label>Third reminder sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Stores Membership Username</description>
        <inlineHelpText>Stores Membership Username</inlineHelpText>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_post_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome post sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tempUpdText__c</fullName>
        <label>tempUpdText</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmpUpd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to refresh the subscriptions and force an update.</description>
        <label>tmpUpd</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>Admin_Renewal_OppThis_Week</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Duration__c</columns>
        <columns>First_Reminder_Date__c</columns>
        <columns>Renewal_Opportunity_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Reminder_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Admin: Renewal OppThis Week</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sub_Ref__c</columns>
        <columns>Subscription_Sites__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Earliest_Lapse_Days__c</columns>
        <columns>First_Reminder_Date__c</columns>
        <columns>Credit_Status__c</columns>
        <columns>Original_Start_date__c</columns>
        <columns>Subscription_Value__c</columns>
        <columns>Type__c</columns>
        <columns>CB_Ref__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </filters>
        <label>Current</label>
    </listViews>
    <listViews>
        <fullName>All_Subscriptions</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Subscriptions</label>
    </listViews>
    <listViews>
        <fullName>Current_Subs_setup_incorrectly_by_user</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6 and (7 OR 8)</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Includes_Membership_Product__c</columns>
        <columns>Includes_E_Delivery_Product__c</columns>
        <columns>Includes_Publication_Product__c</columns>
        <columns>Includes_Info_Membership_Product__c</columns>
        <columns>Includes_RCP_Product__c</columns>
        <columns>Includes_Tools_Membership_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_Line__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Subscription_Sites__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Site_Product__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Migrated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Current</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
        </filters>
        <label>Current Subs setup incorrectly by user</label>
    </listViews>
    <listViews>
        <fullName>LMS_subs_Data_Input</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Create_Renewal_Objects_on__c</columns>
        <columns>First_Reminder_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>First_reminder_email_sent__c</columns>
        <columns>Second_reminder_email_sent__c</columns>
        <columns>Third_reminder_email_sent__c</columns>
        <columns>Type__c</columns>
        <columns>Invoice_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Includes_E_Delivery_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/19/2013 12:00 AM</value>
        </filters>
        <label>LMS subs Data Input</label>
        <sharedTo>
            <role>Customer_Service_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RCP_Renewing_Subscriptions</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4 AND 5 AND 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>End_Date__c</columns>
        <columns>First_Reminder_Date__c</columns>
        <columns>Lapse_Date__c</columns>
        <columns>Site_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Includes_RCP_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Current - Renewing</value>
        </filters>
        <filters>
            <field>Includes_RCP_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>First_Reminder_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Pending - Not Paid,Pending - Paid,Current - Not Paid,Current</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Current - Cancelling,Ended - Renewed,Ended - Cancelled,Ended - Lapsed</value>
        </filters>
        <label>RCP Renewing Subscriptions</label>
    </listViews>
    <listViews>
        <fullName>Subs_not_set_up_correctly_by_Migration</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_Line__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Subscription_Sites__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Site_Product__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Migrated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Subs not set up correctly by Migration</label>
    </listViews>
    <listViews>
        <fullName>Subscriptions_Manual_Admin</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Old_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Lapse_Date__c</columns>
        <columns>Renewal_Opportunity__c</columns>
        <columns>Invoice_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Current - Manual Admin</value>
        </filters>
        <label>Subscriptions - Manual Admin</label>
    </listViews>
    <listViews>
        <fullName>Website_Subscriptions_Packs_to_Send</fullName>
        <columns>NAME</columns>
        <columns>Sub_Ref__c</columns>
        <columns>Subscription_Sites__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Subscription_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Website User</value>
        </filters>
        <filters>
            <field>Subscription_Pack_Sent__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Website Subscriptions Packs to Send</label>
    </listViews>
    <nameField>
        <label>Sub Ref: Current Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_change_type_after_creation</fullName>
        <active>false</active>
        <description>Only the renewals system can create subscription renewals so after creation of a subscription the type cannot be changed</description>
        <errorConditionFormula>IF( 
   AND(
        ISCHANGED( Type__c ),
               
                        $Profile.Id &lt;&gt; &quot;00e20000001Mkam&quot;,
                        $Profile.Id &lt;&gt; &quot;00e200000011wmQ&quot;,
                        $Profile.Id &lt;&gt; &quot;00eD0000001PgyI&quot;,
                        $Profile.Id &lt;&gt; &quot;00eD0000001Pgxo&quot;
              
    )
   , true, false
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You can only edit or create new subscriptions, all renewals are created as part of the renewals process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Sub_Insrt_with_Accnt_DC_1_or_3_or_6</fullName>
        <active>false</active>
        <errorConditionFormula>AND (ISNEW(), OR(Account_Name__r.Data_Cleanse_1__c == true, Account_Name__r.Data_Cleanse_3__c == true, Account_Name__r.Data_Cleanse_6__c  == true))</errorConditionFormula>
        <errorMessage>You can not insert new Subscription as this account will be deleted under Data Cleanse Project. Please contact IT team on 07789933270</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewed_Subs_Requires_Subsequent_Sub</fullName>
        <active>false</active>
        <description>If subscription is renewed and subsequent subscription is left blank an error message prompts the user to add the subsequent subscription</description>
        <errorConditionFormula>AND(  
 $Setup.Workflow_Validation__c.Validation_Disabled__c =FALSE,

(OR(
ISPICKVAL(Status__c, &quot;Current - Renewed&quot;),
ISPICKVAL(Status__c, &quot;Ended - Renewed&quot;)
))
,
 ISBLANK(Subsequent_Subscription__c )
)</errorConditionFormula>
        <errorMessage>If the Subscription is Renewed, populate the Subsequent Subscription</errorMessage>
    </validationRules>
</CustomObject>